fixed radio issue on firefox and safari

--- a/css/styles.css
+++ b/css/styles.css
@@ -134,10 +134,10 @@ h6 {
 }
 
 .radionums{
+    opacity: 0;
     position: absolute;
     width: 0px;
     height: 0px;
-
 }
 
 .labels{
